<resources>
    <string name="app_name">LetItPlay</string>
    <string name="menu_item_trends">Trends</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_playlist">Playlist</string>
    <string name="menu_item_channels">Channels</string>
    <string name="menu_item_feed">Feed</string>
    <string name="menu_item_profile">Profile</string>

    <!--CHANNELS-->
    <string name="channels_following">Following</string>
    <string name="channels_unfollowing">Follow</string>
    <string name="channel_page_description">No description</string>
    <string name="channel_page_recent_added">Recent added</string>
    <string name="channels_categories">Categories</string>
    <string name="channels_you_subscribed">You are subscribed</string>
    <string name="channels_show">Show</string>

    <!--FEED-->
    <string name="playing_now">playing now</string>
    <string name="feed_no_tracks">There are no tracks here yet.\nSubscribe to one of the channels first</string>
    <string name="feed_go_to_channels">Browse channels list</string>

    <!--TRACK-->
    <string name="track_recent_added">Recent added</string>
    <string name="time_published_ago">ago</string>
    <string name="no_trends">There are no tracks</string>
    <string name="track_share">Share</string>
    <string name="track_report">Report</string>

    <!--PLAYLIST-->
    <string name="playlists_no_tracks">There are no tracks</string>

    <!--PROFILE-->
    <string name="profile_favourite_tracks">Tracks you’ve liked</string>
    <string name="profile_user_name">Your future profile</string>
    <string name="profile_hidden_channels">Hidden channels</string>
    <string name="profile_adult_content">Allow adult content</string>
    <string name="profile_adult_message">After clicking «Yes» materials for adults will be available</string>
    <string name="profile_adult_title">Confirm that you are already 18 years old</string>
    <string name="profile_yes">Yes</string>
    <string name="profile_no">No</string>

    <!-- SEARCH -->
    <string name="search_title">Search</string>
    <string name="search_no_recommendation">There are no recommendations</string>
    <string name="search_actual_news">Fresh news in 30 minutes</string>
    <string name="search_compilation">A compilation of fresh news in one 30-minute compilation</string>

    <!--LANGUAGE-->
    <string name="language_select_language">Select\nyour language</string>
    <string name="language_logo_text">let it play</string>

    <!--GLOBAL-->
    <string name="report_dialog_title">Reason</string>
    <string name="report_message">Your complaint will be reviewed by moderators</string>
    <string name="hide_message">The channel will be hidden from the tape. To restore go to profile screen.</string>


    <!--REMOTE-->
    <string name="authorization_header" translatable="false">Authorization</string>


    <plurals name="weeks_long">
        <item quantity="one">%d w. ago</item>
        <item quantity="other">%d w. ago</item>
    </plurals>
    <plurals name="days_long">
        <item quantity="one">%d d. ago</item>
        <item quantity="other">%d d. ago</item>
    </plurals>
    <plurals name="hours_long">
        <item quantity="one">%d h. ago</item>
        <item quantity="other">%d h. ago</item>
    </plurals>
    <plurals name="minutes_long">
        <item quantity="one">%d m. ago</item>
        <item quantity="other">%d m. ago</item>
    </plurals>
    <plurals name="seconds_long">
        <item quantity="one">%d sec. ago</item>
        <item quantity="other">%d sec. ago</item>
    </plurals>

    <string name="weeks_short">%dw. ago</string>
    <string name="days_short">%dd. ago</string>
    <string name="hours_short">%dh. ago</string>
    <string name="minutes_short">%dm. ago</string>
    <string name="seconds_short">%dsec. ago</string>

    <string name="track_added">Track added</string>
    <string name="add_down_the_playlist">Add down the playlist</string>
    <string name="add_up_the_playlist">Add up the playlist</string>

    <string name="all">all</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="clear_all">Clear all</string>
    <string name="see_all">see all</string>
    <string name="my_playlist">My playlist</string>
    <string name="recommended">Recommended</string>
    <string name="to_the_top_of_the_playlist">To the top of the playlist</string>
    <string name="to_the_bottom_of_the_playlist">To the bottom of the playlist</string>
    <string name="select_language">Select language</string>


    <string name="language_en">Language: English</string>
    <string name="language_ru">Language: Русский</string>
    <string name="language_fr">Language: Français</string>
    <string name="language_zh">Language: Chinese</string>

    <string name="english" translatable="false">English</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="french" translatable="false">Français</string>
    <string name="china" translatable="false">Chinese</string>


    <string name="filter_view_http_letitplay">filter_view_http_letitplay</string>
</resources>
