<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/channel_page_banner"
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/channel_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/channel_page_preview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/channel_page_preview"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/feed_preview_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/channel_page_title"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/channel_preview_followers_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/followers_ic"
            app:layout_constraintBottom_toTopOf="@+id/channel_page_title"
            app:layout_constraintStart_toEndOf="@+id/channel_page_preview" />

        <TextView
            android:id="@+id/channel_page_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="345 567"
            android:textColor="#4a4a4a"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/channel_page_title"
            app:layout_constraintStart_toEndOf="@+id/channel_preview_followers_icon" />

        <TextView
            android:id="@+id/channel_page_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/following_bg"
            android:paddingBottom="6dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="6dp"
            android:text="@string/channels_following"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/channel_page_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/channel_page_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="6sp"
            android:text="Disgusting men"
            android:textColor="@color/colorBlack"
            android:textSize="24dp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/channel_page_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/channel_page_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/channel_page_description"
            android:textColor="#020202"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/channel_page_teg_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/channel_page_teg_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:alignContent="flex_start"
            app:alignItems="flex_start"
            app:flexDirection="row"
            app:flexWrap="wrap"
            app:justifyContent="flex_start"
            app:layout_constraintBottom_toTopOf="@+id/channel_page_separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/channel_page_separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:alpha="0.2"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/channel_page_recent_added"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/channel_page_recent_added"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="21sp"
            android:text="@string/channel_page_recent_added"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/recent_added_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recent_added_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/channel_page_most_listened"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/channel_page_most_listened"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="21sp"
            android:text="@string/channel_page_most_listened"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/most_listened_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/most_listened_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/channel_page_with_guests"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/channel_page_with_guests"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="21sp"
            android:text="@string/channel_page_most_listened"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/with_guests_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/with_guests_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>